Jul 17, 2023
  CurationAlleleGenerator -- updated to schema 1.7.4
    new format for notes: allele_notes_dto --> notes_dto
    also exporting allele descriptions (GENES.GENE_DESC) as notes of type 'comment' or 'mutation_description'

Jun 05, 2023
  updated script to submit GFF files to 5.4.0 S3 bucket

Jun 02, 2023
  CurationDafGenerator -- updated to schema 1.7.3
    disease_genetic_modifier_curie ==> disease_genetic_modifier_curies
  CurationAlleleGenerator -- updated to schema 1.7.3
    new format for allele_secondary_id_dtos
  CurationAGMGenerator -- updated to schema 1.7.3
    secondary_identifiers ==> agm_secondary_id_dtos
  CurationGeneGenerator -- updated to schema 1.7.3
    secondary_identifiers ==> gene_secondary_id_dtos

May 25, 2023
  CurationDafGenerator -- moved hard-coded qualifier mappings into properties file
    changed the qualifiers as follows (per SCRUM-2824):
      onset               ==> onset_of
      severity            ==> severity_of
      sexual_dimorphism   ==> sexual_dimorphism_in
      susceptibility      ==> susceptibility_to
      penetrance          ==> penetrance_of
      disease_progression ==> disease_progression_of
      resistance          ==> resistance_to

May 16, 2023
  CurationDafGenerator -- now providing DataProviderDTO.cross_reference_dto data for RGD (OMIM xref data still missing)
  CurationAlleleGenerator -- added DataProviderDTO
  CurationAGMGenerator -- added DataProviderDTO
  CurationGeneGenerator -- added DataProviderDTO -- discontinued 'gene_systematic_name_dto'

May 12, 2023
  CurationDafGenerator -- fixed generation of notes field
  CurationDafGenerator -- added support for DataProviderDTO

Mar 22, 2023
  CurationDafGenerator -- suppressed generation of 'condition_free_text' fields to avoid having
    duplicate text in summaries on the Alliance website
    -- suppress generation of 'with_gene_curies' having RGD ids

Feb 23, 2023
  CurationGeneGenerator -- fixed an issue with gene_full_name_dto fields
